<resources>
    <string name="app_name">Pizzeria Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_label">Welcome to Pizzeria Application</string>
    <string name="registration_label">Create account</string>
    <string name="pizza_name">%s</string>
    <string name="pizza_ingredients">$d</string>
    <string name="pizza_price">%s $</string>
    <string name="pizza_diameter">%s cm</string>
    <string name="your_order_details">Your order details</string>
    <string name="your_order_is_empty">Your order is empty</string>
    <string name="sum">Sum</string>
    <string name="delivery">Delivery</string>
    <string name="total_cost">Total cost</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="go_to_checkout">Go to checkout</string>
    <string name="delivery_address">Delivery address</string>
    <string name="street_name_and_building_number">Street name and building number</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="apartment_number">Apartment number</string>
    <string name="floor">Floor</string>
    <string name="add_note_for_delievery">Add note for delievery</string>
    <string name="order_and_pay">Order and pay</string>
    <string name="your_pizza_s_friends">Your pizza\'s friends</string>
    <string name="sign_in">Sign in</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">submit</string>
    <string name="you_have_successfully_ordered_pizza">You have successfully ordered pizza!</string>
    <string name="main_menu">Main menu</string>
    <string name="close_app">Close app</string>
    <string name="profile_image">Profile Image</string>
    <string name="ingredients">Ingredients</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="subtract_quantity">Subtract Quantity</string>
    <string name="user_favourite_pizzas">User favourite pizzas</string>
    <string name="confirm_password_hint">CONFIRM PASSWORD</string>
    <string name="estimation_icon">Estimation Icon</string>
    <string name="price_icon">Price Icon</string>
    <string name="subtract_quantity_button">Subtract Quantity Button</string>
    <string name="delete_item_button">Delete Item Button</string>
    <string name="pizza_image">Pizza Image</string>
    <string name="add_quantity_button">Add Quantity Button</string>
    <string name="ordered_successfully">Ordered Successfully</string>
    <string name="add_items_to_your_order">Add items to your order</string>
    <string name="user_s_profile_image">User\'s profile image</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="add_to_favourites_icon">Add to favourites icon</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="email_profile_view_hint">Email</string>
    <string name="_20_30_minutes">20 – 30 minutes</string>
</resources>