<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="checkoutFragment"
            type="com.nalepa.pizzeriaapplication.fragments.CheckoutFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1F1F1"
            android:paddingBottom="26dp"
            tools:context=".fragments.CheckoutFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="16dp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addressContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/street_name_and_building_number"
                    app:helperText="Required"
                    app:helperTextTextColor="@color/design_default_color_error"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/postalCodeContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/postal_code"
                    app:helperText="Required"
                    app:helperTextTextColor="@color/design_default_color_error"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/postalCode"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/city"
                    app:helperText="Required"
                    app:helperTextTextColor="@color/design_default_color_error"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/apartment_number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apartmentNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:hint="@string/floor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/floor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="120"
                    android:hint="@string/add_note_for_delievery"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/msg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="110dp"
                        android:inputType="textMultiLine"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/orderAndPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:text="@string/order_and_pay"
            android:textColor="@color/black"
            style="@style/DefaultButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>