<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cartFragment"
            type="com.nalepa.pizzeriaapplication.fragments.CartFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".fragments.CartFragment">

            <LinearLayout
                android:id="@+id/linearLayoutOutside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/your_order_details"
                        android:textSize="24sp"
                        android:textStyle="bold|italic" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/orderRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        tools:listitem="@layout/recycler_ordered_list_item" />

                    <TextView
                        android:id="@+id/emptyListTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/your_order_is_empty"
                        android:textStyle="bold|italic"
                        android:visibility="invisible" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="60dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/sum" />

                        <TextView
                            android:id="@+id/sum"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:text="@string/delivery" />

                        <TextView
                            android:id="@+id/delevieryPrice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="6"
                            android:text="@string/total_cost"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/totalCost"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ImageView
            android:id="@+id/emptyCartImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_cart"
            app:layout_constraintBottom_toTopOf="@+id/makeOrder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/add_items_to_your_order" />

        <TextView
            android:id="@+id/emptyCartText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_cart_is_empty"
            android:textSize="20sp"
            android:textStyle="italic|bold"
            android:textColor="#CBCBCB"
            android:layout_marginTop="5dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emptyCartImage" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/makeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/go_to_checkout"
            android:textColor="@color/black"
            style="@style/DefaultButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>