<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="menuListItem"
            type="com.nalepa.pizzeriaapplication.MenuAdapter" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/custom_border">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp">

            <ImageView
                android:id="@+id/pizzaImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/pizza_image" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <TextView
                android:id="@+id/pizzaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="5dp"
                android:layout_gravity="start"/>

            <TextView
                android:id="@+id/pizzaIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_estimation"
                    android:contentDescription="@string/estimation_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/_20_30_minutes"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="5dp"
                    android:paddingStart="15dp"
                    android:src="@drawable/ic_money"
                    android:contentDescription="@string/price_icon" />

                <TextView
                    android:id="@+id/pizzaPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>